@@ -997,29 +997,11 @@ LedgerAutoCompletion(SplitRegister *reg, gncTableTraversalDir dir,
       xaccSetComboCellValue (reg->xfrmCell, fullname);
       xaccBasicCellSetChanged(&(reg->xfrmCell->cell), GNC_T);
 
-      /* auto-complete the amounts */
-      if ((STOCK_REGISTER    == reg_type) ||
-          (CURRENCY_REGISTER == reg_type) ||
-          (PORTFOLIO_LEDGER  == reg_type)) 
-        amount = xaccSplitGetShareAmount (auto_split);
-      else
-        amount = xaccSplitGetValue (auto_split);
-
-      xaccSetDebCredCellValue (reg->debitCell, reg->creditCell, amount);
-      xaccBasicCellSetChanged(&(reg->debitCell->cell), GNC_T);
-      xaccBasicCellSetChanged(&(reg->creditCell->cell), GNC_T);
+      amount = xaccSplitGetValue (auto_split);
 
       xaccSetDebCredCellValue (reg->ndebitCell, reg->ncreditCell, -amount);
-      xaccBasicCellSetChanged(&(reg->ndebitCell->cell), GNC_T);
-      xaccBasicCellSetChanged(&(reg->ncreditCell->cell), GNC_T);
-
-      amount = xaccSplitGetSharePrice (auto_split);
-      xaccSetPriceCellValue (reg->priceCell, amount);
-      xaccBasicCellSetChanged(&(reg->priceCell->cell), GNC_T);
-
-      amount = xaccSplitGetValue (auto_split);
-      xaccSetPriceCellValue (reg->valueCell, amount);
-      xaccBasicCellSetChanged(&(reg->valueCell->cell), GNC_T);
+      xaccBasicCellSetChanged (&(reg->ndebitCell->cell), GNC_T);
+      xaccBasicCellSetChanged (&(reg->ncreditCell->cell), GNC_T);
 
       /* copy cursor contents into the table */
       xaccCommitCursor (reg->table);
